--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,18 @@ android {
 
 
 dependencies {
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    def okHttp_version = '4.8.0'
+    def retrofit_version = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okHttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+//    //noinspection GradleCompatible
+//    implementation 'com.android.support:design:28.0.0'
+//    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
