--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ android {
 dependencies {
     def okHttp_version = '4.8.0'
     def retrofit_version = '2.9.0'
+
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
