--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation "com.squareup.okhttp3:okhttp:$okHttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttp_version"
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 
 //    //noinspection GradleCompatible
 //    implementation 'com.android.support:design:28.0.0'
