--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ plugins {
 }
 
 
+
+
+
 android {
     compileSdk 32
 
@@ -42,8 +45,9 @@ android {
     }
 
 
-}
 
+
+}
 
 
 dependencies {
@@ -60,6 +64,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttp_version"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'com.github.unsplash:unsplash-photopicker-android:1.0.1'
 
 //    //noinspection GradleCompatible
 //    implementation 'com.android.support:design:28.0.0'
