--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.github.javafaker:javafaker:1.0.2'
 
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
 
 //    //noinspection GradleCompatible
 //    implementation 'com.android.support:design:28.0.0'
