--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
 }
 
 
@@ -65,8 +66,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.github.javafaker:javafaker:1.0.2'
 
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0    '
     implementation 'com.google.android.material:material:1.6.1'
+
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
 
 
 //    //noinspection GradleCompatible
